# git_2_markdown

./: .gitignore  README.md  main.py  pyproject.toml
modules/: __init__.py  converter.py  file_discovery.py  git_handler.py  markdown_generator.py  pdf_reader.py  text_reader.py
